--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: Home
-description: The latest app to help you find new friends with common interests.
+description: A fan site for the works of Cliver Barker
 image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
 bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
