--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Home
 description: A fan site for the works of Cliver Barker
-image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
+image: https://fastfamiliar.b-cdn.net/sitebuilder/dog.jpg
 bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
 
