--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<h1 class="editable">Cliver Barker Lives</h1>
-			<p class="subtext editable">Frisco helps you find new friends with common interests. Search for a new Tennis partner, find a baking side-kick or befriend a new drinking buddy.</p>
-			<div class="cta button alt"><a href="#">Join Now</a></div>
+			<p class="subtext editable">Clive Barker is an English novelist, playwright, author, film director, and visual artist who came to prominence in the mid-1980s with a series of short stories, the Books of Blood, which established him as a leading horror writer. </p>
+			<div class="cta button alt"><a href="#">Become a member</a></div>
 		</div>
 	</div>
-	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
+	<div class="learn-more"><a href="#learn-more">Read more <span class="arrow">&#x25BC;</span></a></div>
 </section>
 
 <div class="content">
 	<section class="info" id="learn-more">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Introduce yourself</h2>
-				<p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
+				<h2 class="editable">About Clive</h2>
+				<p class="editable">Barker's paintings and illustrations have been shown in galleries in the United States, and have appeared in his books. He has also created characters and series for comic books, and some of his more popular horror stories have been featured in ongoing comics series.</p>
 			</div>
 			<div class="image">
 				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
